<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location_bridge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roboami.ryan.wizard.LocationBridge">

    <TextView
        android:text="@string/Bridge_WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/Bridge_WelcomeText"
        tools:text="Hope there are no trolls around here!"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Bridge_ButtonBoat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Bridge_WelcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:id="@+id/Bridge_ButtonBoat"
        tools:text="Boat" />

    <Button
        android:text="@string/Bridge_ButtonPub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/Bridge_ButtonPub"
        android:layout_below="@+id/Bridge_ButtonBoat"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Bridge_ButtonTower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Bridge_ButtonPub"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/Bridge_ButtonTower" />
</RelativeLayout>
