<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location_pub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roboami.ryan.wizard.LocationPub">

    <TextView
        android:text="@string/Pub_WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/Pub_welcometext"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/Pub_ButtonStables"
        android:layout_alignStart="@+id/Pub_ButtonStables" />

    <Button
        android:text="@string/Pub_ButtonStables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Pub_ButtonStables"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/Pub_welcometext"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Pub_ButtonBridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/Pub_ButtonBridge"
        android:layout_below="@+id/Pub_ButtonStables"
        android:layout_alignLeft="@+id/Pub_ButtonStables"
        android:layout_alignStart="@+id/Pub_ButtonStables" />

    <TextView
        android:text="@string/Pub_PlayerStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/Pub_PlayerStats"
        android:layout_below="@+id/Pub_ButtonBridge"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
