<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_location_tower"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roboami.ryan.wizard.LocationTower">

    <TextView
        android:text="@string/Tower_WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/Dungeon_WelcomeText" />

    <Button
        android:text="@string/Tower_ButtonBridge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Dungeon_WelcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:id="@+id/Tower_ButtonBridge" />

    <Button
        android:text="@string/Tower_ButtonDungeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Tower_ButtonDungeon" />
</RelativeLayout>
